--- a/app/src/main/res/layout/fragment_huruf.xml
+++ b/app/src/main/res/layout/fragment_huruf.xml
@@ -8,7 +8,7 @@
     android:layout_marginVertical="20dp">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewAlphabets"
+        android:id="@+id/rvHuruf"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
